--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4"
+    "typescript": "4.5.4",
+    "@babel/core": "latest"
   },
   "_moduleAliases": {
     "@components": "./components/"
