--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "export": "next build && next export"
   },
   "dependencies": {
-    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/loader": "^2.1.2",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^12.0.8",
     "@types/js-yaml": "^4.0.5",
@@ -17,7 +17,7 @@
     "js-yaml": "^4.1.0",
     "module-alias": "^2.2.2",
     "next": "latest",
-    "next-mdx-remote": "^3.0.8",
+    "next-mdx-remote": "^4.1.0",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,6 +25,7 @@
     "sharp": "^0.30.0"
   },
   "devDependencies": {
+    "@babel/core": "latest",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
@@ -39,8 +40,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4",
-    "@babel/core": "latest"
+    "typescript": "4.5.4"
   },
   "_moduleAliases": {
     "@components": "./components/"
