--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rehype-prism-plus": "^1.5.0",
     "remark-gfm": "^3.0.1",
-    "remark-prism": "^1.3.6",
     "sharp": "^0.30.0"
   },
   "devDependencies": {
